src/objects/TalentOverhead__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Talent Overhead</relationshipLabel>
        <relationshipName>Talent_Overhead</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeInOffer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fxAmount__c</fullName>
        <formula>(Amount__c / (Deal__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Talent Overhead</label>
    <nameField>
        <displayFormat>TO-{000000}</displayFormat>
        <label>Talent Overhead ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talent Overhead</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>